--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<script src="./1_2.js" type="text/javascript"></script>
+<script src="./condicionales.js" type="text/javascript"></script>
 </body>
 
 </html>
