--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 	<title></title>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8"/>
 </head>
 
 <body>
-<script src="./condicionales.js" type="text/javascript"></script>
+<script src="./condicionales.js" language="spanish" type="text/javascript"></script>
 </body>
 
 </html>
