--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<script src="./condicionales.js" language="spanish" type="text/javascript"></script>
+<script src="./04-ManejoStrings.js" language="spanish" type="text/javascript"></script>
 </body>
 
 </html>
