--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<title></title>
-	<meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+	<meta http-equiv="content-type" content="text/html charset=utf-8"/>
 </head>
 
 <body>
-<script src="./04-ManejoStrings.js" language="spanish" type="text/javascript"></script>
+<script src="./08-Manejo_Objetos.js" language="spanish" type="text/javascript"></script>
 </body>
 
 </html>
