--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<script src="./08-Manejo_Objetos.js" language="spanish" type="text/javascript"></script>
+<!-- <script src="./09-Manejo_Objetos2.js" language="spanish" type="text/javascript"></script> -->
 </body>
 
 </html>
