--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<style>
+		* {
+			font-size: 24px;
+		}	
+	</style>
 	<meta http-equiv="content-type" content="text/html charset=utf-8"/>
 </head>
 
 <body>
-<!-- <script src="./09-Manejo_Objetos2.js" language="spanish" type="text/javascript"></script> -->
+<button id="boton">OFF</button>
+<script type="text/javascript" src="18-Bind.js"></script>
 </body>
 
 </html>
